...
        switch self {
        case .tokens: "Tokens"
        case .multipleChoice: "Multiple Choice"
        case .yesNo: "Yes/No"
        case .location: "Location"
        case .people: "People"
        case .number: "Number"
        case .note: "Note"
        case .time: "Time"
        }
    }
}

...
